--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/SIG_HTML/More on CSS Selectors/index.html"
+    "livePreview.defaultPreviewPath": "/SIG_HTML/CSS Flexbox/index.html"
 }
